# Innovate-To-Grow-Website

./: .bandit-baseline.json  .env.example  .gitignore  .pr-body-unify.md  .pr-body.md  .pre-commit-config.yaml  AGENTS.md  BARCODE_SYSTEM_ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  EVENT_PROJECTS_RELATIONSHIP.md  LICENSE  MAIL_APP_SETUP.md  README.md  app.py  build_legacy_import.py  capture_pages.py  data_clean.py  databaseMergeTable.json  i2g-double-mail.ini  models.py  package-lock.json  projects.json  pyproject.toml  requirements.txt  routes.py  test.py  test2.py  wsgi.py
.agent/: AGENTS.md
.claude/: CLAUDE.md  launch.json  settings.json
.github/: dependabot.yml
archive/: README.md
aws/: archive-task-definition.json  task-definition.json
backup_old/: I2G Membership-OLD.xlsx  (+2 more)
cli/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
cli/src/i2g_admin/: __main__.py  app.py  auth.py  callback_server.py  client.py  config.py  context.py  errors.py  output.py  pkce.py  query.py  runtime.py
cli/src/i2g_admin/commands/: __init__.py  apps_cmd.py  auth.py  completion.py  meta.py  pagination.py  query_params.py  records.py  records_count.py  records_wait.py  skeleton.py
cli/src/i2g_admin/formatters/: __init__.py  stubs.py
cli/tests/: conftest.py  test_app.py  test_auth.py  test_callback_server.py  test_client.py  test_completion.py  test_config.py  test_context.py  test_formatters.py  test_main.py  test_output.py  test_pagination.py  test_pkce.py  test_query.py  test_query_params.py  test_records_wait.py  test_runtime.py  test_skeleton.py
(+4629 files in other folders)
