[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "i2g-admin"
version = "0.2.0"
description = "Terminal CLI for remote record management of the Innovate-To-Grow backend via OAuth2 + PKCE."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "rich>=13",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "responses>=0.25",
]

[project.scripts]
i2g-admin = "i2g_admin.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["i2g_admin"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
